# sphinxcontrib-advanced-search

./: .gitignore  README.md  build-frontend.py  pyproject.toml  setup.cfg
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.d.ts  use-debounce.ts
frontend/src/styles/: app.scss  index.css
sphinx_advanced_search/: __init__.py  search.html
sphinx_advanced_search/css/: sphinx-advanced-search.min.css
sphinx_advanced_search/js/: sphinx-advanced-search.min.js
tests/: conftest.py
